--- a/lms/admin/bootstrap/css/my_style.css
+++ b/lms/admin/bootstrap/css/my_style.css
@@ -1,8 +1,8 @@
 body{
-     background: -moz-linear-gradient(center top , #FFFFFF, #D3D8E8) repeat fixed 0 0 rgba(0, 0, 0, 0);
+     background: -moz-linear-gradient(center top , #7ede2a, #D3D8E8) repeat fixed 0 0 rgba(0, 0, 0, 0);
 }
 body { 
-	background: -moz-linear-gradient(center top , #FFFFFF, #D3D8E8) repeat fixed 0 0 rgba(0, 0, 0, 0);
+	background: -moz-linear-gradient(center top , #7ede2a, #D3D8E8) repeat fixed 0 0 rgba(0, 0, 0, 0);
   -webkit-background-size: cover !important; 
   -moz-background-size: cover !important; 
   -o-background-size: cover !important; 
